--- a/index.html
+++ b/index.html
@@ -383,181 +383,14 @@
             <a href="https://github.com/isayani-78/sayanimaity78/raw/main/Sayani%20Maity%20Resume.pdf" class="cta-btn download-btn">DOWNLOAD RESUME</a>
         </div>
     </header>
-
+<section id="about" class="hidden">
+    <h2 class="section-title hyper-text">FILE: PROFILE</h2>
+    
     <div class="cert-display-case">
-    <style>
-    /* CSS FOR THE FLIPPING EFFECT */
-    .cert-display-case {
-        max-width: 600px;
-        margin: 2rem auto;
-        perspective: 1000px; /* Essential for 3D effect */
-    }
-
-    .cert-flipper {
-        width: 100%;
-        height: 400px; /* Adjust height based on your image aspect ratio */
-        cursor: pointer;
-        position: relative;
-        transform-style: preserve-3d;
-        transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    /* Flip the card on hover */
-    .cert-display-case:hover .cert-flipper {
-        transform: rotateY(180deg);
-    }
-
-    .cert-front, .cert-back {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        backface-visibility: hidden; /* Hides the reverse side */
-        -webkit-backface-visibility: hidden;
-        border: 2px solid var(--accent-primary);
-        border-radius: 5px;
-        overflow: hidden;
-        background: #000;
-    }
-
-    .cert-back {
-        transform: rotateY(180deg); /* Starts already flipped */
-    }
-
-    .cert-display-img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain; /* Ensures the whole certificate shows without cropping */
-    }
-
-    .cert-display-header {
-        text-align: center;
-        margin-bottom: 10px;
-        color: var(--accent-primary);
-        font-family: var(--font-mono);
-        font-size: 0.9rem;
-    }
-</style>
-
-<div class="cert-display-case">
-    <style>
-    /* CSS FOR THE FLIPPING EFFECT */
-    .cert-display-case {
-        max-width: 600px;
-        margin: 2rem auto;
-        perspective: 1000px; /* Essential for 3D effect */
-    }
-
-    .cert-flipper {
-        width: 100%;
-        height: 400px; /* Adjust height based on your image aspect ratio */
-        cursor: pointer;
-        position: relative;
-        transform-style: preserve-3d;
-        transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    /* Flip the card on hover */
-    .cert-display-case:hover .cert-flipper {
-        transform: rotateY(180deg);
-    }
-
-    .cert-front, .cert-back {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        backface-visibility: hidden; /* Hides the reverse side */
-        -webkit-backface-visibility: hidden;
-        border: 2px solid var(--accent-primary);
-        border-radius: 5px;
-        overflow: hidden;
-        background: #000;
-    }
-
-    .cert-back {
-        transform: rotateY(180deg); /* Starts already flipped */
-    }
-
-    .cert-display-img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain; /* Ensures the whole certificate shows without cropping */
-    }
-
-    .cert-display-header {
-        text-align: center;
-        margin-bottom: 10px;
-        color: var(--accent-primary);
-        font-family: var(--font-mono);
-        font-size: 0.9rem;
-    }
-</style>
-
-<div class="cert-display-case">
-    <style>
-    /* CSS FOR THE FLIPPING EFFECT */
-    .cert-display-case {
-        max-width: 600px;
-        margin: 2rem auto;
-        perspective: 1000px; /* Essential for 3D effect */
-    }
-
-    .cert-flipper {
-        width: 100%;
-        height: 400px; /* Adjust height based on your image aspect ratio */
-        cursor: pointer;
-        position: relative;
-        transform-style: preserve-3d;
-        transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    /* Flip the card on hover */
-    .cert-display-case:hover .cert-flipper {
-        transform: rotateY(180deg);
-    }
-
-    .cert-front, .cert-back {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        backface-visibility: hidden; /* Hides the reverse side */
-        -webkit-backface-visibility: hidden;
-        border: 2px solid var(--accent-primary);
-        border-radius: 5px;
-        overflow: hidden;
-        background: #000;
-    }
-
-    .cert-back {
-        transform: rotateY(180deg); /* Starts already flipped */
-    }
-
-    .cert-display-img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain; /* Ensures the whole certificate shows without cropping */
-    }
-
-    .cert-display-header {
-        text-align: center;
-        margin-bottom: 10px;
-        color: var(--accent-primary);
-        font-family: var(--font-mono);
-        font-size: 0.9rem;
-    }
-</style>
-
-<div class="cert-display-case">
-    <div class="cert-display-header">PRIMARY CREDENTIAL: CEH V13ai (HOVER TO VIEW TRANSCRIPT)</div>
-    <div class="cert-flipper">
-        <div class="cert-front">
+            <div class="cert-display-header">PRIMARY CREDENTIAL: CEH V13ai</div>
             <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH-Certificate.jpg" alt="CEH Certificate" class="cert-display-img">
         </div>
-        <div class="card-back cert-back">
-            <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20ExamTranscript.jpg" alt="Exam Transcript" class="cert-display-img">
-        </div>
-    </div>
-</div>
-
+   
         <div class="about-grid">
             <div class="about-text">
                 <p> <strong>Identity:</strong> Sayani Maity<br>
@@ -1086,6 +919,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
