--- a/index.html
+++ b/index.html
@@ -305,6 +305,26 @@
             .hero h1 { font-size: 2.8rem; }
             .about-grid { grid-template-columns: 1fr; }
             .cert-display-case { width: 90%; } 
+            /* FORCE STACKING */
+    .hero, .about, .contact, .container, section {
+        flex-direction: column !important;
+        display: flex !important;
+        text-align: center !important;
+        padding: 40px 20px !important;
+    }
+
+    .hero-content, .about-content {
+        width: 100% !important;
+        margin: 0 !important;
+    }
+
+    /* Fix the certificate display for mobile */
+    .cert-display-case {
+        width: 100% !important;
+        max-width: 100% !important;
+        margin: 20px 0 !important;
+    }
+}
             
             /* Mobile Nav */
             .nav-links { 
@@ -919,6 +939,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
