--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 /* 2. Fix Mobile View (Alignment & Scaling) */
 @media (max-width: 768px) {
+    .hero { margin-top: 50px !important; }
     /* Fix Header Overlap */
     header .nav-container {
         flex-direction: column !important;
@@ -977,6 +978,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
