--- a/index.html
+++ b/index.html
@@ -5,6 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Sayani Maity | Digital Forensics & Cybersecurity</title>
     <style>
+        /* --- 3D CERTIFICATE FLIP LOGIC --- */
+.cert-display-case {
+    display: flex;
+    justify-content: center;
+    padding: 50px 20px;
+    perspective: 1000px; /* Essential for 3D depth */
+}
+
+.cert-card {
+    width: 600px; /* Matches your laptop view size */
+    height: 450px;
+    background: transparent;
+    cursor: pointer;
+}
+
+.cert-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+    transform-style: preserve-3d;
+}
+
+/* The Flip Trigger */
+.cert-card:hover .cert-inner {
+    transform: rotateY(180deg);
+}
+
+.cert-front, .cert-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+    border: 2px solid var(--accent-primary);
+    border-radius: 10px;
+    overflow: hidden;
+    background: #050505;
+}
+
+/* Label at the top of the cert */
+.cert-label {
+    background: var(--accent-primary);
+    color: #000;
+    font-weight: bold;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.cert-back {
+    transform: rotateY(180deg); /* Faces the back away initially */
+}
+
+.cert-front img, .cert-back img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* Ensures the full cert is visible */
+}
         /* --- FINAL BALANCED BADGE & MOBILE FIX --- */
 
 /* 1. Fix Laptop View (Preventing them from being "too much") */
@@ -359,7 +422,7 @@
         .hidden { opacity: 0; transform: translateY(50px); transition: 1s all ease; }
         .show { opacity: 1; transform: translateY(0); }
 
-       --- MOBILE OPTIMIZATION --- */
+       /*--- MOBILE OPTIMIZATION --- */
         @media (max-width: 768px) {
             .hero h1 { font-size: 2.8rem; }
             .about-grid { grid-template-columns: 1fr; }
@@ -446,9 +509,19 @@
     <h2 class="section-title hyper-text">FILE: PROFILE</h2>
     
     <div class="cert-display-case">
-            <div class="cert-display-header">PRIMARY CREDENTIAL: CEH V13ai</div>
-            <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH-Certificate.jpg" alt="CEH Certificate" class="cert-display-img">
+    <div class="cert-card">
+        <div class="cert-inner">
+            <div class="cert-front">
+                <div class="cert-label">PRIMARY CREDENTIAL: CEH V13ai</div>
+                <img src="https://sayanimaity78.site/CEH%20V13ai.jpg" alt="CEH Certificate">
+            </div>
+            <div class="cert-back">
+                <div class="cert-label">EXAM TRANSCRIPT</div>
+                <img src="https://sayanimaity78.site/Sayani%20ExamTranscript.jpg" alt="Exam Transcript">
+            </div>
         </div>
+    </div>
+</div>
    
         <div class="about-grid">
             <div class="about-text">
@@ -978,6 +1051,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
