--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Sayani Maity | Digital Forensics & Cybersecurity</title>
     <style>
-      /* --- FINAL SINGLE-BORDER FLIP FIX --- */
+      /* --- CLEAN SINGLE-VIEW FLIP --- */
 .cert-display-case {
     display: flex;
     justify-content: center;
-    padding: 30px 0;
+    padding: 20px 0;
     perspective: 1000px;
 }
 
 .cert-card {
     width: 600px; 
     height: 420px;
-    background: transparent;
+    background: #000;
     cursor: pointer;
-    position: relative;
-    /* This is your ONLY border */
     border: 2px solid var(--accent-primary);
-    border-radius: 8px;
+    border-radius: 10px;
+    position: relative;
     overflow: hidden; 
 }
 
@@ -42,7 +41,6 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
     background: #000;
 }
 
@@ -53,28 +51,22 @@
 .cert-front img, .cert-back img {
     width: 100%;
     height: 100%;
-    object-fit: fill; /* This stretches the image slightly to kill the inner box gaps */
-    display: block;
+    object-fit: fill; /* This stretches the image to touch the teal border */
 }
 
-/* SMALLER LABEL: Won't cover the cert content */
+/* MOVED LABEL TO BOTTOM: Won't cover important text */
 .cert-label {
     position: absolute;
-    top: 0;
-    left: 0;
+    bottom: 0;
+    right: 0;
     background: var(--accent-primary);
     color: #000;
-    padding: 3px 10px;
-    font-size: 0.65rem; /* Smaller font */
+    padding: 2px 10px;
+    font-size: 0.6rem;
     font-weight: bold;
     z-index: 10;
-    border-bottom-right-radius: 8px;
+    border-top-left-radius: 8px;
     text-transform: uppercase;
-}
-
-/* Hover effect for the whole container */
-.cert-card:hover {
-    box-shadow: 0 0 25px rgba(0, 255, 204, 0.3);
 }
         /* --- FINAL BALANCED BADGE & MOBILE FIX --- */
 
@@ -1059,6 +1051,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
