--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Sayani Maity | Digital Forensics & Cybersecurity</title>
     <style>
-      /* --- CLEAN SINGLE-VIEW FLIP --- */
+      /* --- FINAL SINGLE-BORDER FLIP FIX --- */
 .cert-display-case {
     display: flex;
     justify-content: center;
-    padding: 20px 0;
+    padding: 30px 0;
     perspective: 1000px;
 }
 
 .cert-card {
     width: 600px; 
     height: 420px;
-    background: #000;
+    background: transparent;
     cursor: pointer;
-    border: 2px solid var(--accent-primary);
-    border-radius: 10px;
     position: relative;
+    /* This is your ONLY border */
+    border: 2px solid var(--accent-primary);
+    border-radius: 8px;
     overflow: hidden; 
 }
 
@@ -41,6 +42,7 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     background: #000;
 }
 
@@ -51,22 +53,28 @@
 .cert-front img, .cert-back img {
     width: 100%;
     height: 100%;
-    object-fit: fill; /* This stretches the image to touch the teal border */
+    object-fit: fill; /* This stretches the image slightly to kill the inner box gaps */
+    display: block;
 }
 
-/* MOVED LABEL TO BOTTOM: Won't cover important text */
+/* SMALLER LABEL: Won't cover the cert content */
 .cert-label {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    top: 0;
+    left: 0;
     background: var(--accent-primary);
     color: #000;
-    padding: 2px 10px;
-    font-size: 0.6rem;
+    padding: 3px 10px;
+    font-size: 0.65rem; /* Smaller font */
     font-weight: bold;
     z-index: 10;
-    border-top-left-radius: 8px;
+    border-bottom-right-radius: 8px;
     text-transform: uppercase;
+}
+
+/* Hover effect for the whole container */
+.cert-card:hover {
+    box-shadow: 0 0 25px rgba(0, 255, 204, 0.3);
 }
         /* --- FINAL BALANCED BADGE & MOBILE FIX --- */
 
@@ -481,7 +489,10 @@
             <a href="#about" class="nav-link" onclick="toggleMenu()">FILE: PROFILE</a>
             <a href="#skills" class="nav-link" onclick="toggleMenu()">ARSENAL</a>
             <a href="#projects" class="nav-link" onclick="toggleMenu()">CASES</a>
-            <a href="#credentials" class="nav-link" onclick="toggleMenu()">CREDENTIALS</a>
+            <div class="credentials-header">
+    <a href="#credentials" class="nav-link" onclick="toggleMenu()">CREDENTIALS</a>
+    <span class="click-hint">( CLICK TO VIEW CERTIFICATES )</span>
+</div>
             <a href="#thm-badges" class="nav-link" onclick="toggleMenu()">BADGES</a>
             <a href="#contact" class="nav-link" onclick="toggleMenu()">UPLINK</a>
         </div>
@@ -1051,6 +1062,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
