--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <style>
         .click-view-hint {
     color: var(--accent-primary);
-    font-size: 0.7rem;           /* Small size as requested */
+    font-size: 0.8rem;
     text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-top: -10px;           /* Pulls it up close to the title */
-    margin-bottom: 20px;
-    opacity: 0.8;
-    font-weight: bold;
+    width: 100%;           /* Ensures it stays centered on mobile */
+    margin: 10px 0 30px 0; /* Adds breathing room above the cards */
+    display: block;
 }
       /* --- FINAL SINGLE-BORDER FLIP FIX --- */
 .cert-display-case {
@@ -1071,6 +1068,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
