--- a/index.html
+++ b/index.html
@@ -515,6 +515,9 @@
     </header>
 <section id="about" class="hidden">
     <h2 class="section-title hyper-text">FILE: PROFILE</h2>
+<p class="click-view-hint">( REVERSE SIDE [CLICK] )</p>
+        <div class="cert-container">
+            <div class="cert-track">
     
    <div class="cert-display-case">
     <div class="cert-card">
@@ -1060,6 +1063,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
