--- a/index.html
+++ b/index.html
@@ -514,10 +514,13 @@
         </div>
     </header>
 <section id="about" class="hidden">
-    <h2 class="section-title hyper-text">FILE: PROFILE</h2>
-<p class="click-view-hint">( REVERSE SIDE [CLICK] )</p>
-        <div class="cert-container">
-            <div class="cert-track">
+   <p style="color: #00ffd5; font-family: monospace; font-size: 14px; margin-top: -10px; margin-bottom: 20px; letter-spacing: 1px; text-transform: uppercase;">
+  <span style="animation: blink 1s infinite;">_</span>( REVERSE SIDE [CLICK] )
+</p>
+
+<style>
+  @keyframes blink { 0% { opacity: 1; } 50% { opacity: 0; } 100% { opacity: 1; } }
+</style>
     
    <div class="cert-display-case">
     <div class="cert-card">
@@ -1063,6 +1066,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
