--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
             <a href="https://github.com/isayani-78/sayanimaity78/raw/main/Sayani%20Maity%20Resume.pdf" class="cta-btn download-btn">DOWNLOAD RESUME</a>
         </div>
     </header>
+    <h2 class="section-title hyper-text">FILE: PROFILE</h2>
 <section id="about" class="hidden">
    <p style="color: #00ffd5; font-family: monospace; font-size: 14px; margin-top: -10px; margin-bottom: 20px; letter-spacing: 1px; text-transform: uppercase;">
   <span style="animation: blink 1s infinite;">_</span>( REVERSE SIDE [CLICK] )
@@ -1066,6 +1067,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
