--- a/index.html
+++ b/index.html
@@ -863,9 +863,11 @@
         <h2 style="color:#fff; font-weight:bold; margin-bottom:20px;">Contact</h2>
 
         <!-- Contact Description -->
-        <p style="font-size:16px; margin-bottom:10px;">
-            Let’s connect and collaborate! Reach out to me for cybersecurity discussions, research ideas, or project opportunities.
-        </p>
+       <p style="font-family: 'Courier New', monospace; font-size: 16px; margin-bottom: 10px; color: #00ffd5; line-height: 1.6;">
+  <strong style="color: #ff00ff; font-weight: 900; text-shadow: 0 0 5px #ff00ff;">> root@sayani:~#</strong> execute contact_protocol<br>
+  Inquiries: [Forensics | Research | Collaboration]<br>
+  Status: <span style="color: #fff;">Open for connection.</span>
+</p>
 
         <!-- Email Display -->
         <p style="font-size:16px; margin-bottom:20px; color:#00ff66; font-weight:bold;">
@@ -1067,6 +1069,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
