--- a/index.html
+++ b/index.html
@@ -864,12 +864,22 @@
         <h2 style="color:#fff; font-weight:bold; margin-bottom:20px;">Contact</h2>
 
         <!-- Contact Description -->
-       <p style="font-family: 'Courier New', monospace; font-size: 16px; margin-bottom: 10px; color: #00ffd5; line-height: 1.6;">
-  <strong style="color: #ff00ff; font-weight: 900; text-shadow: 0 0 5px #ff00ff;">> root@sayani:~#</strong> execute contact_protocol<br>
-  Inquiries: [Forensics | Research | Collaboration]<br>
-  Status: <span style="color: #fff;">Open for connection.</span>
-</p>
+       <div style="width: 100%; max-width: 100vw; overflow-x: hidden; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px 0; margin: 0 auto;">
+  
+  <div style="width: 90%; max-content: 500px; text-align: center;">
+    
+    <h2 class="section-title">Contact</h2>
 
+    <div style="display: block; width: 100%; margin: 0 auto; word-wrap: break-word;">
+       <p style="font-family: monospace; font-size: 14px; color: #00ffd5; display: inline-block; text-align: left; max-width: 100%;">
+         <strong style="color: #ff00ff;">> root@sayani:~#</strong> execute contact_protocol<br>
+         Inquiries: [Forensics | Research | Collaboration]<br>
+         Status: Open for connection.
+       </p>
+    </div>
+
+    </div>
+</div>
         <!-- Email Display -->
         <p style="font-size:16px; margin-bottom:20px; color:#00ff66; font-weight:bold;">
             sayanimaity78@gmail.com
@@ -1070,6 +1080,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
