--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
         <div class="glitch-wrapper">
             <h1 class="glitch" data-text="SAYANI MAITY">SAYANI MAITY</h1>
         </div>
-        <p> CEH V13ai Certified || Digital Forensics Analyst || Penetration Tester </p>
+        <p> CEH V13 AI Certified || Digital Forensics Analyst || Penetration Tester </p>
         <div class="hero-btns">
             <a href="#contact" class="cta-btn">INITIALIZE CONTACT</a>
             <a href="https://github.com/isayani-78/sayanimaity78/raw/main/Sayani%20Maity%20Resume.pdf" class="cta-btn download-btn">DOWNLOAD RESUME</a>
@@ -545,7 +545,7 @@
 </p>
 
                   <p>I am <strong>Sayani Maity</strong>, currently pursuing a <strong>B.Sc. in Digital Forensics (2023–2026)</strong> at <strong>Indian School of Ethical Hacking (ISOEH), Kolkata,</strong>under<strong>Maulana Abul Kalam Azad University of Technology (MAKAUT), West Bengal, India</strong>.</p>
-                  <p>As a <strong>CEH v13ai Certified professional</strong>, I specialize in bridging the gap between theoretical security and real-world defense.</p>
+                  <p>As a <strong>CEH v13 AI Certified professional</strong>, I specialize in bridging the gap between theoretical security and real-world defense.</p>
                   <p>I specialize in <strong>Digital Forensics, Penetration Testing, OSINT, and cybersecurity tooling</strong>.</p>
                   <p>My expertise lies in <strong>Penetration Testing (WAPT/VAPT), OSINT research</strong>, and the development of <strong>AI-assisted detection tools</strong>.</p>
                   <p>I am proficient in <strong>automating security workflows using Python and Bash</strong>, ensuring efficiency and precision in technical operations.</p>
@@ -558,7 +558,7 @@
             <div class="stats-container">
                 <div class="stat-card">
                     <img src="https://raw.githubusercontent.com/isayani-78/sayanimaity78/refs/heads/main/assets/Sayani%20CEH%20badge.jpg" alt="CEH Badge" class="ceh-badge-img">
-                    <span class="stat-label">V13ai Certified</span>
+                    <span class="stat-label">(CEH) v13 AI Certified</span>
                 </div>
                 <div class="stat-card">
                     <span class="stat-number">3+</span>
@@ -796,7 +796,7 @@
 
         <div class="timeline-item">
             <span class="timeline-date">2026</span>
-            <h3 class="timeline-title">CEH V13ai Certified</h3>
+            <h3 class="timeline-title">CEH v13 AI Certified</h3>
             <span class="timeline-sub">EC-Council.</span>
         </div>
 
@@ -804,7 +804,7 @@
         <div class="timeline-item">
             <span class="timeline-date">Ongoing</span>
             <h3 class="timeline-title">
-                CEH V13ai Master (Certified Ethical Hacker Master)
+                CEH v13 AI Master (Certified Ethical Hacker Master)
             </h3>
             <span class="timeline-sub">in Progress</span>
         </div>
@@ -1079,6 +1079,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
