--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
         <div class="glitch-wrapper">
             <h1 class="glitch" data-text="SAYANI MAITY">SAYANI MAITY</h1>
         </div>
-        <p> CEH V13 AI Certified || Digital Forensics Analyst || Penetration Tester </p>
+        <p> (CEH) v13 AI Certified || Digital Forensics Analyst || Penetration Tester </p>
         <div class="hero-btns">
             <a href="#contact" class="cta-btn">INITIALIZE CONTACT</a>
             <a href="https://github.com/isayani-78/sayanimaity78/raw/main/Sayani%20Maity%20Resume.pdf" class="cta-btn download-btn">DOWNLOAD RESUME</a>
@@ -1079,6 +1079,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
