--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Sayani Maity | Digital Forensics & Cybersecurity</title>
+    <title>Hello :) I am Sayani</title>
     <style>
       /* --- FINAL SINGLE-BORDER FLIP FIX --- */
 .cert-display-case {
@@ -1079,6 +1079,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
