--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         <div class="nav-links" id="nav-menu">
             <a href="#about" class="nav-link" onclick="toggleMenu()">FILE: PROFILE</a>
             <a href="#skills" class="nav-link" onclick="toggleMenu()">ARSENAL</a>
-            <a href="#projects" class="nav-link" onclick="toggleMenu()">CASES</a>
+            <a href="#projects" class="nav-link" onclick="toggleMenu()">PROJECTS</a>
             <a href="#credentials" class="nav-link" onclick="toggleMenu()">CREDENTIALS</a>
             <a href="#thm-badges" class="nav-link" onclick="toggleMenu()">BADGES</a>
             <a href="#contact" class="nav-link" onclick="toggleMenu()">UPLINK</a>
@@ -1079,6 +1079,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
