--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
             <h3 class="timeline-title">
                 CHFI (Computer Hacking Forensic Investigator)
             </h3>
-            <span class="timeline-sub">in Progress</span>
+            <span class="timeline-sub">Currently completing the Syllabus</span>
         </div>
 
         <div class="timeline-item">
@@ -1079,6 +1079,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
