--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
 
         <div class="timeline-item">
             <span class="timeline-date">2015 - 2023</span>
-            <h3 class="timeline-title">ICSE & ISC (with pure scienc)</h3>
+            <h3 class="timeline-title">ICSE & ISC (with pure science)</h3>
             <span class="timeline-sub">St. Thomas' High School, Howrah, West Bengal,India.</span>
         </div>
 </section>
@@ -1070,6 +1070,7 @@ document.querySelectorAll(".project-card").forEach(card => {
 </body>
 
 </html>
+
 
 
 
